--- a/exercicio-1/site/site.html
+++ b/exercicio-1/site/site.html
@@ -12,7 +12,7 @@
     <img src="Gemini_Generated_Image_pydketpydketpydk.jpg" alt="logo">
    </header>
    <div>
-    <a href="index.html">Pagina inicio</a>
+    <a href="site.html">Pagina inicio</a>
    </div>
 
 </body>
