--- a/exercicio-1/login/login.html
+++ b/exercicio-1/login/login.html
@@ -2,7 +2,7 @@
 <head>
    
     <title>Instabuk-Login</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="login.css">
 </head>
 <body>
     <br>
