--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>Inscreva-se</h1>
     </header>
 
-    <form action="../site/site.html" method="get">
+    <form action="./site.html" method="get">
     <label for="nome">Nome</label>
     <br>
     <input type="" id="nome" name="nome" required>
